--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://coderrob22.github.io/AI",
+  "homepage": "https://coderrob22.github.io/AI/",
   "name": "gpt3",
   "version": "0.1.0",
   "private": true,
